--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,2 +1,147 @@
-@media screen and (max-width: 799.99px) {
+@media screen and (max-width: 999.99px) {
+    html {
+        background: white;
+        overflow-y: scroll;
+    }
+    body {
+    }
+    #cursor {
+        display: none;
+    }
+    #preload {
+        position: fixed;
+        z-index: 100 - 1;
+        background: white;
+        height: 100vh;
+        width: 100vw;
+        top: 0;
+        left: 0;
+        //transition-delay: 1s;
+        transition-duration: 1.5s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        pointer-events: none;
+        #p {
+            height: 100px;
+            width: 100px;
+            border: 2px solid white;
+            border-top: 2px solid black;
+            border-radius: 50%;
+            animation: spin 1.5s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    }
+    #header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 101;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 60px;
+        width: 100vw;
+        font-size: 18px;
+        padding: 0 25px;
+        box-sizing: border-box;
+        background: rgba(255,255,255,.5);
+        backdrop-filter: blur(10px);
+        #links {
+            width: 180px;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+        }
+        a {
+            border-bottom: 2px solid rgba(0,0,0,0);
+            transition-duration: .3s;
+        }
+        a:hover {
+            border-bottom: 2px solid black;
+        }
+    }
+    #pageWrap {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        #projects {
+            width: 100vw;
+            position: absolute;
+            transition-duration: .75s;
+            transition-timing-function: ease-out;
+            display: flex;
+            flex-direction: column;
+            .x {
+                position: sticky;
+                bottom: 0;
+                width: 100vw;
+                height: 100vh;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                img {
+                    width: auto;
+                    max-width: 100vw;
+                    max-height: 100vh;
+                }
+            }
+        }
+    }
+    .scroll {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        margin: 20px 0;
+        text-align: center;
+        font-size: 18px;
+    }
+    #about {
+        padding: 100px 25px 0 25px;
+        box-sizing: border-box;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        #desc {
+            font-size: 34px;
+            line-height: 1.15;
+            color: black;
+            margin-bottom: 60px;
+            a {
+                color: black;
+                transition-duration: .3s;
+                border-bottom: 4px solid white;
+                &:hover {
+                    border-bottom: 4px solid #333;
+                }
+            }
+        }
+        #image {
+            width: 100%;
+            height: 80vw;
+            z-index: -1;
+            background-image: url('../img/joseph-min.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
+            transition-timing-function: ease-out;
+        }
+        #footer {
+            margin-top: 60px;
+            text-align: center;
+            font-size: 18px;
+            color: rgba(0,0,0,0.75);
+            line-height: 1.25;
+            height: 40px;
+        }
+    }
 }
