--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -50,8 +50,8 @@
         font-size: 18px;
         padding: 0 25px;
         box-sizing: border-box;
-        background: rgba(255,255,255,.5);
-        backdrop-filter: blur(10px);
+        //background: rgba(255,255,255,.5);
+        //backdrop-filter: blur(10px);
         #links {
             width: 180px;
             display: flex;
