--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,7 +1,7 @@
 $text: LightGrey;
 $bg: rgb(20, 20, 20);
 * {
-    font-family: Styrene B, serif;
+    font-family: acumin-pro, serif;
     font-weight: 400;
     margin: 0;
     padding: 0;
