--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -57,6 +57,9 @@
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
+            .contact {
+                margin-left: 30px;
+            }
         }
         a {
             border-bottom: 2px solid rgba(0,0,0,0);
@@ -116,6 +119,7 @@
             line-height: 1.15;
             color: black;
             margin-bottom: 60px;
+            min-height: calc(100vh - 260px);
             a {
                 color: black;
                 transition-duration: .3s;
