--- a/css/styles.scss
+++ b/css/styles.scss
@@ -25,7 +25,7 @@ $bg: rgb(20, 20, 20);
         justify-content: center;
         align-items: center;
         z-index: 11;
-        pointer-events: none    ;
+        pointer-events: none;
         div {
             backdrop-filter: invert(1);
             height: 2px;
@@ -97,6 +97,9 @@ $bg: rgb(20, 20, 20);
             display: flex;
             flex-direction: row;
             justify-content: flex-end;
+            .contact {
+                margin-left: 30px;
+            }
         }
         a {
             border-bottom: 2px solid rgba(0,0,0,0);
@@ -151,7 +154,7 @@ $bg: rgb(20, 20, 20);
             font-size: 6vw;
             line-height: 1.15;
             color: black;
-            margin-bottom: -10vw;
+            min-height: calc(100vh - 150px - 140px);
             a {
                 color: black;
                 transition-duration: .3s;
@@ -162,6 +165,7 @@ $bg: rgb(20, 20, 20);
             }
         }
         #image {
+            margin-top: -11vw;
             height: 70vw;
             width: calc(100% - 200px);
             z-index: -1;
